feat: add API to get user reservations by name